tests/test_assets/semantic/valid/expressions/arithmetic_literal_boundaries.cog
test_arithmetic_literal_boundaries::(
    value_u8: u8,
    value_i8: i8
) -> void {
    value_u8 + 0;
    value_u8 - 255;

    value_i8 + 127;
    value_i8 - (-128);
}
