tests/test_assets/semantic/invalid/casts/compile_time_argument_range.cog
takes_u8::(value: u8) -> void {
}

test::() -> void {
    takes_u8(cast(u8, 256));
}